--- a/agree/res/layout/activity_comments_list.xml
+++ b/agree/res/layout/activity_comments_list.xml
@@ -2,6 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#ffffff"
     tools:context=".CommentsListActivity" >
 
     <RelativeLayout
@@ -36,18 +37,48 @@
             android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"
             android:background="#aaaaaa" />
+
+        <TextView
+            android:id="@+id/textView4"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true"
+            android:text="参与列表"
+            android:textColor="#000000"
+            android:textSize="18.0sp" />
+
+        <!--
+        <RelativeLayout
+            android:layout_width="80.0dp"
+            android:layout_height="match_parent"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true" >
+
+            <TextView
+                android:id="@+id/textView6"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:layout_centerVertical="true"
+                android:text="保存"
+                android:textColor="#d3d3d3"
+                android:textSize="17.0sp" />
+        </RelativeLayout>
+        -->
     </RelativeLayout>
 
     <LinearLayout
         android:id="@+id/Comments_list_layout"
         android:layout_width="match_parent"
-        android:layout_height="100.0dp"
+        android:layout_height="70.0dp"
         android:layout_below="@+id/Comments_list_title_layout"
         android:layout_centerHorizontal="true"
         android:background="#ffffff"
         android:orientation="horizontal" >
 
         <RelativeLayout
+            android:id="@+id/Commentslist_partake_list_layout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_gravity="center"
@@ -55,36 +86,35 @@
             android:gravity="center" >
 
             <RelativeLayout
-                android:id="@+id/Comments_list_partake_layout"
-                android:layout_width="72.0dp"
-                android:layout_height="80.0dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_centerHorizontal="true"
                 android:layout_centerVertical="true" >
 
                 <TextView
-                    android:id="@+id/textView3"
+                    android:id="@+id/Commentslist_partake_list_prompt"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentTop="true"
                     android:layout_centerHorizontal="true"
-                    android:layout_marginTop="15dp"
+                    android:layout_marginTop="10.0dp"
                     android:text="参与"
                     android:textColor="#000000" />
 
                 <TextView
-                    android:id="@+id/Comments_list_partake_count"
+                    android:id="@+id/Commentslist_partake_list_number"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_below="@+id/textView3"
+                    android:layout_below="@+id/Commentslist_partake_list_prompt"
                     android:layout_centerHorizontal="true"
-                    android:layout_marginTop="10dp"
-                    android:text="1"
-                    android:textColor="#000000"
-                    android:textSize="20.0sp" />
+                    android:text="0"
+                    android:textColor="#00e3e3"
+                    android:textSize="30.0sp" />
             </RelativeLayout>
         </RelativeLayout>
 
         <RelativeLayout
+            android:id="@+id/Commentslist_not_say_layout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_gravity="center"
@@ -92,69 +122,30 @@
             android:gravity="center" >
 
             <RelativeLayout
-                android:id="@+id/Comments_list_refuse_layout"
-                android:layout_width="72.0dp"
-                android:layout_height="80.0dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_centerHorizontal="true"
                 android:layout_centerVertical="true" >
 
                 <TextView
-                    android:id="@+id/textView5"
+                    android:id="@+id/Commentslist_not_say_prompt"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentTop="true"
-                    android:layout_centerHorizontal="true"
-                    android:layout_marginTop="15dp"
-                    android:text="拒绝"
-                    android:textColor="#000000" />
-
-                <TextView
-                    android:id="@+id/Comments_list_refuse_count"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@+id/textView5"
                     android:layout_centerHorizontal="true"
                     android:layout_marginTop="10.0dp"
-                    android:text="1"
-                    android:textColor="#000000"
-                    android:textSize="20.0sp" />
-            </RelativeLayout>
-        </RelativeLayout>
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_gravity="center"
-            android:layout_weight="1"
-            android:gravity="center" >
-
-            <RelativeLayout
-                android:id="@+id/Comments_list_not_say_layout"
-                android:layout_width="72.0dp"
-                android:layout_height="80.0dp"
-                android:layout_centerHorizontal="true"
-                android:layout_centerVertical="true" >
-
-                <TextView
-                    android:id="@+id/textView7"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentTop="true"
-                    android:layout_centerHorizontal="true"
-                    android:layout_marginTop="15dp"
                     android:text="未表态"
                     android:textColor="#000000" />
 
                 <TextView
-                    android:id="@+id/Comments_list_not_say_count"
+                    android:id="@+id/Commentslist_not_say_number"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_below="@+id/textView7"
+                    android:layout_below="@+id/Commentslist_not_say_prompt"
                     android:layout_centerHorizontal="true"
-                    android:layout_marginTop="10dp"
-                    android:text="1"
-                    android:textColor="#000000"
-                    android:textSize="20.0sp" />
+                    android:text="0"
+                    android:textColor="#00e3e3"
+                    android:textSize="30.0sp" />
             </RelativeLayout>
         </RelativeLayout>
     </LinearLayout>
@@ -166,7 +157,16 @@
         android:layout_centerHorizontal="true" >
 
         <ListView
-            android:id="@+id/Comments_list_listview"
+            android:id="@+id/Commentslist_partake_list_listview"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true"
+            android:background="#ffffff" >
+        </ListView>
+
+        <ListView
+            android:id="@+id/Commentslist_not_say_listview"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_centerHorizontal="true"
