--- a/agree/res/layout/activity_request_code.xml
+++ b/agree/res/layout/activity_request_code.xml
@@ -5,6 +5,7 @@
     android:background="#deffffff"
     tools:context=".RequestCodeActivity" >
 
+    <!--
     <TextView
         android:id="@+id/request_tv_code"
         android:layout_width="wrap_content"
@@ -51,5 +52,65 @@
         android:textSize="18.0sp" 
         android:visibility="gone"
         />
+    -->
+
+    <RelativeLayout
+        android:id="@+id/Requestcode2_title_layout"
+        android:layout_width="match_parent"
+        android:layout_height="50.0dp"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true" >
+
+        <TextView
+            android:id="@+id/textView1"
+            android:layout_width="match_parent"
+            android:layout_height="0.50dp"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            android:background="#aaaaaa" />
+
+        <RelativeLayout
+            android:id="@+id/Requestcode2_OK_layout"
+            android:layout_width="80.0dp"
+            android:layout_height="match_parent"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true" >
+
+            <TextView
+                android:id="@+id/Requestcode2_OK"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:layout_centerVertical="true"
+                android:text="完成"
+                android:textColor="#d3d3d3"
+                android:textSize="17.0sp" />
+        </RelativeLayout>
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/Requestcode2_title_layout"
+        android:layout_centerHorizontal="true" >
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            >
+
+            <com.BJ.utils.VerifyCodeView
+                android:id="@+id/Requestcode2_verifyCodeView"
+                android:layout_width="match_parent"
+                android:layout_height="50.0dp"
+                android:layout_centerHorizontal="true"
+                android:layout_marginLeft="40.0dp"
+                android:layout_marginRight="40.0dp"
+                android:layout_marginTop="50.0dp"
+                 />
+        </RelativeLayout>
+    </RelativeLayout>
 
 </RelativeLayout>
