--- a/agree/res/layout/tabhost_item.xml
+++ b/agree/res/layout/tabhost_item.xml
@@ -3,6 +3,11 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
 
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="58.0dp"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true" >
 
         <ImageView
             android:id="@+id/tab_image"
@@ -13,15 +18,31 @@
             android:layout_marginTop="5.0dp"
             android:src="@drawable/tab_home_selector" />
 
-        <TextView
-            android:id="@+id/tab_name"
-            android:layout_width="30.0dp"
-            android:layout_height="wrap_content"
-            android:layout_alignLeft="@+id/tab_image"
-            android:layout_alignRight="@+id/tab_image"
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:layout_below="@+id/tab_image"
-            android:gravity="center"
-            android:textColor="@color/tab_textcolor_selector"
-            android:text="小组" />
+            android:layout_centerHorizontal="true" >
+
+            <TextView
+                android:id="@+id/tab_name"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_alignParentBottom="true"
+                android:layout_centerHorizontal="true"
+                android:gravity="center_horizontal"
+                android:text="小组"
+                android:textColor="@color/tab_textcolor_selector"
+                android:textSize="15.0sp" />
+
+        </RelativeLayout>
+    </RelativeLayout>
+
+    <TextView
+        android:id="@+id/textView1"
+        android:layout_width="match_parent"
+        android:layout_height="0.50dp"
+        android:layout_alignParentTop="true"
+        android:background="#aaaaaa" />
 
 </RelativeLayout>
