--- a/agree/res/values/colors.xml
+++ b/agree/res/values/colors.xml
@@ -312,5 +312,7 @@
     <color name="btn_gray_pressed_status">#b5b5b6</color>
     <color name="btn_blue_pressed">#0066FF</color>
     <color name="btn_blue_normal">#1e90ff</color>
+    <color name="green_1">#00e3e3</color>
+    <color name="green_2">#00d3d3</color>
 
 </resources>
