--- a/agree/res/drawable/tab_home_selector.xml
+++ b/agree/res/drawable/tab_home_selector.xml
@@ -4,7 +4,7 @@
         android:drawable="@drawable/tab_home_red"
         ></item>
     <item android:state_selected="true" android:state_pressed="false"
-        android:drawable="@drawable/tab_home_red"
+        android:drawable="@drawable/agree_tabbar_group_icon_green"
         ></item>
-	<item android:drawable="@drawable/tab_home_gray"></item>
+	<item android:drawable="@drawable/agree_tabbar_group_icon_gray"></item>
 </selector>
