--- a/agree/res/drawable/tab_party_selector.xml
+++ b/agree/res/drawable/tab_party_selector.xml
@@ -4,8 +4,8 @@
         android:drawable="@drawable/tab_party_red"
         ></item>
     <item android:state_selected="true" android:state_pressed="false"
-        android:drawable="@drawable/tab_party_red"
+        android:drawable="@drawable/agree_tabbar_party_icon_green"
         ></item>
-	<item android:drawable="@drawable/tab_party_gray"></item>
+	<item android:drawable="@drawable/agree_tabbar_party_icon_gray"></item>
 
 </selector>
