--- a/agree/res/layout/slidingmenu_member_item.xml
+++ b/agree/res/layout/slidingmenu_member_item.xml
@@ -37,6 +37,7 @@
             android:layout_toRightOf="@+id/relativeLayout1"
             android:gravity="left|center"
             android:text="TextView"
+            android:textColor="#000000"
             android:textSize="14.0sp" />
 
         <TextView
