--- a/agree/res/values/colors.xml
+++ b/agree/res/values/colors.xml
@@ -312,7 +312,7 @@
     <color name="btn_gray_pressed_status">#b5b5b6</color>
     <color name="btn_blue_pressed">#0066FF</color>
     <color name="btn_blue_normal">#1e90ff</color>
-    <color name="green_1">#00e3e3</color>
+    
     <color name="green_2">#00d3d3</color>
     <color name="white">#FFFFFF</color>
     <color name="blue">#0066FF</color>
@@ -335,5 +335,11 @@
     
     
     <color name="contact_num_sort_bg">#66ffffff</color>
+    
+    <!-- 主界面底部字体颜色 -->
+    <color name="tab_text_color_green">#88d4cc</color>
+    <color name="tab_text_color_gray">#959595</color>
+    
+    <color name="party_time_background">#88d4cc</color>
 
 </resources>
