--- a/agree/res/values/drawables.xml
+++ b/agree/res/values/drawables.xml
@@ -1,26 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+
     <drawable name="moregray">#cdcdcd</drawable>
     <drawable name="gray">#f0f0f0</drawable>
     <drawable name="white">#ffffff</drawable>
     <drawable name="eewhite">#eeffffff</drawable>
     <drawable name="view_light">#fcfcfc</drawable>
     <drawable name="black">#000000</drawable>
-    <drawable name="green_3">#00e3e3</drawable>
-    <drawable name="lightgray2">#d3d3d3</drawable>
     
+
     <!-- 头部标题底部颜色 -->
     <drawable name="title_background">#ffffff</drawable>
-    
-    
+
     <!-- 头部标题字体颜色 -->
-    <drawable name="title_left_color">#d3d3d3</drawable><!-- 头部左边字体颜色 -->
-    <drawable name="title_right_color">#00e3e3</drawable><!-- 头部右边字体颜色 -->
-    
-    <!-- 界面背景颜色  -->
-    <drawable name="background">#efefef</drawable><!-- 界面背景颜色 -->
-    
-     <!-- 设置选项的字体颜色 -->
-      <drawable name="setting_prompt_color">#808080</drawable><!-- 头部左边字体颜色 -->
-     
+    <drawable name="title_left_color">#959595</drawable>
+ <!-- 头部左边字体颜色 -->
+    <drawable name="title_right_color">#88d4cc</drawable>
+ <!-- 头部右边字体颜色 -->
+
+
+    <!-- 界面背景颜色 -->
+    <drawable name="background">#efefef</drawable>
+ <!-- 界面背景颜色 -->
+
+
+    <!-- 设置选项的字体颜色 -->
+    <drawable name="setting_prompt_color">#959595</drawable>
+ <!-- 头部左边字体颜色 -->
+
+
+    <!-- CommonFragmnet -->
+    <drawable name="Common_text_color_green">#88d4cc</drawable>
+    <drawable name="Common_text_color_gray">#959595</drawable>
+
 </resources>
